--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@ panel {
 }
 
 .jumbotron {
-    background-color: #5cb85c;
-    color: #eeeecc;
+    background-color: #6ed46e;
+    color: #7690e7;
     padding-top: 1%;
     padding-bottom: 2%;
 }
